# zotero-summarizer

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Makefile  README.md  eval-baseline-20260514.json  goals.example.yaml  goals.yaml  learning-curve-20260514.json  pyproject.toml  relabel-audit-session.json  zotero-summarizer-golden.csv.bak
.claude/: settings.json
.claude/hooks/: fail_fast_reminder.sh
.github/workflows/: ci.yml
docs/: README.md  api.md  architecture.md  baseline-ceiling-20260515.md  benchmarking.md  configuration.md  developer-guide.md  feeds.md  frontend.md  goal-aligned-brief-design.md  model-roadmap.md  operations.md  usage.md  user_guide.md
docs/decisions/: 2026-05-15-ui-redesign.md
frontend/: DESIGN.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css  main.jsx
reports/: 20260513_160551_lightgbm.md  20260513_161654_logreg.md  20260513_171116_tabpfn.md  20260513_171629_kather_mistral_large_3.md  20260513_172740_kather_gpt_oss_120b.md
tests/: _daily_select_helpers.py  _zotero_fixtures.py  conftest.py  smoke_test.py  test_abstract_backfill.py  test_active_learning_ground_truth.py  test_adapters_openai.py  test_add_attachment.py  test_admin_model_card.py  test_admin_retrain.py  test_allowlist_reconcile.py  test_api_contracts.py  test_api_routes.py  test_band_calibration.py  test_bench_paper_quality.py  test_border_cache.py  test_browser_fetch_degrade.py  test_claim_checker.py  test_classifier.py  test_classifier_embed_batch.py  test_classifier_persistence.py  test_composite_scoring.py  test_compute_composite_with_prestige.py  test_corpus_bm25.py  test_create_item_from_feed.py  test_cross_library_scope.py  test_daemon_loop.py  test_daily_actions.py  test_daily_select.py  test_daily_select_handled_why.py  test_db_lock_retry.py  test_dead_code_guard.py  test_dedup_content.py  test_deep_review.py  test_deep_review_concurrency.py  test_deep_review_fanout.py  test_deep_review_pdf_override.py  test_deep_review_prewarm.py  test_domain_contracts.py  test_edge_cases_production.py  (+129 more)
tests/e2e/: audit-report-pre.json  audit-report.json  audit.mjs  package-lock.json  package.json  verify_annotate.mjs
tools/: README.md  bench_deep_review.py  bench_paper_quality.py  eval_docling_vs_fitz.py  eval_goal_embedder.py  eval_rigor_vs_band.py  eval_self_verify_live.py  eval_slate_blend.py  eval_temporal_objective.py  mlx-deep-review.sh  sweep_deep_review.sh  validate_prestige_upgrade.py
tools/precommit/: README.md  _model_fields.py  _overlap_embed.py  _redundancy_clones.py  _slop_text.py  check_allowlists.py  check_dead_code.py  check_file_loc.py  check_import_policy.py  check_module_readme.py  check_overlaps.py  check_redundancy.py  check_slop.py  dead_code_allowlist.txt  loc_allowlist.txt  redundancy_allowlist.txt  slop_allowlist.txt  slop_severity.txt  vulture_allowlist.txt
zotero_summarizer/: README.md  __init__.py  cli.py  contracts.py  domain.py  models.py  runtime.py  settings.py
zotero_summarizer/api/: README.md  __init__.py  app.py  errors.py
zotero_summarizer/cli/: README.md  __init__.py  (+11 more)
(+342 files in other folders)
