[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zotero-summarizer"
version = "0.1.0"
description = "Local-first Zotero paper summarization and triage assistant"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.8.0",
    "PyYAML>=6.0.1",
    "python-dotenv>=1.0.1",
    "sentence-transformers>=3.0.1",
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "onprem>=0.21.5",
    "kneed>=0.8.5",
    "adapters>=1.3.0",
    "optuna>=4.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
zotero-summarizer = "zotero_summarizer.cli:main"

[tool.setuptools.packages.find]
include = ["zotero_summarizer*"]

[tool.setuptools.package-data]
zotero_summarizer = ["web/*.html"]
