[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zotero-summarizer"
version = "0.1.0"
description = "Local-first Zotero paper summarization and triage assistant"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.8.0",
    "PyYAML>=6.0.1",
    "python-dotenv>=1.0.1",
    "sentence-transformers>=3.0.1",
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "onprem>=0.21.5",
    "anthropic>=0.69.0",
    "kneed>=0.8.5",
    "adapters>=1.3.0",
    "optuna>=4.8.0",
    "pandas>=2.0.0",
    "rank-bm25>=0.2.2",
    "lightgbm>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-forked>=1.6.0",
    "pre-commit>=3.7.0",
    # Pinned EXACT for a reproducible Tier-2 sweep: findings drift between Vulture
    # versions, so a float would desync `make scan` / the gate from the committed
    # vulture_allowlist.txt. Keep in lockstep with the .pre-commit-config pin.
    "vulture==2.16",
]
# Optional high-fidelity PDF parser (IBM Docling: TableFormer tables + figure
# classification). Heavy (pulls layout models); install only when you want the
# clean figure/table extraction path: `uv pip install docling`. Gated at runtime
# by `quality_review.use_docling` with a fitz fallback, so the base install stays light.
docling = [
    "docling>=2.0.0",
]
# Optional browser automation for university institutional full-text access
# (review fleet → non-arXiv / paywalled PDFs). Patchright is a drop-in patched
# Playwright (undetectable CDP) that passes Cloudflare; a persistent profile
# carries the EZproxy/SSO session. Install when you want the browser fetch path:
# `uv pip install -e '.[browser]' && patchright install chromium`. Gated at
# runtime by `university_access.enabled` with graceful degrade, so the base
# install stays light (no Chromium download). See integrations/browser_fetch.py.
browser = [
    "patchright>=1.40",
]

[project.scripts]
zotero-summarizer = "zotero_summarizer.cli:main"

[tool.setuptools.packages.find]
include = ["zotero_summarizer*"]

[tool.setuptools.package-data]
zotero_summarizer = ["web/*.html"]
